fix building with Solaris PAM

This patch is a little different with Brian's. Let's me explain the whole patch
one by one.

1. pam-ck-connector/Makefile.am (same with Brian's)
   Solaris does not have libpam_misc, so only build test_pam under linux

2. +#include <limits.h>
   This is to get macro PATH_MAX from system. I think it is better than
+#ifndef PATH_MAX
+#define PATH_MAX 4096
+#endif
   On ubuntu, PATH_MAX=4096, on Solaris, PATH_MAX=1024

3. +#include <security/pam_appl.h>
   This is to include declaration of pam_handle_t, to resolve error like:
"/usr/include/security/pam_modules.h", line 38: syntax error before or at: *
"/usr/include/security/pam_modules.h", line 45: syntax error before or at: *

4.-#include <security/_pam_macros.h>
  Solaris does not have this file, I remove it, no more error, seems no use
here.

5. +#ifndef PAM_EXTERN ... part
  Solaris PAM_EXTERN marco in pam_modules.h, while Ubuntu has, I just copy the
logic from Ubuntu.

6. getpwnam_r part (same with Brian's)
   getpwnam_r() have difference behavior between Solaris and Ubuntu.

https://bugs.freedesktop.org/show_bug.cgi?id=18173